12. create buttons for RPS options with classes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
         <title>Rock, Paper, Scissors?</title>
     </head>
     <body>
-        
+        <div class="container">
+            <button class="rockButton">Rock</button>
+            <button class="paperButton">Paper</button>
+            <button class="scissorsButton">Scissors</button>
+        </div>
+        <div class="outcome"></div>
         <script src="myScript.js"></script>
     </body>
 
