--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>Rock, Paper, Scissors?</title>
     </head>
     <body>
+        <div class="running-score"></div>
+        <span class="player-score"></span>
+        <span class="computer-score"></span>
         <div class="container">
             <button class="rockButton">Rock</button>
             <button class="paperButton">Paper</button>
