--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
         <title>Rock, Paper, Scissors?</title>
     </head>
     <body>
-        <div class="running-score"></div>
-        <span class="player-score"></span>
-        <span class="computer-score"></span>
+        
+        
         <div class="container">
             <button class="rockButton">Rock</button>
             <button class="paperButton">Paper</button>
             <button class="scissorsButton">Scissors</button>
+        </div>
+        <div> --------- </div>
+        <div class="running-score">
+            <span class="player-score"></span>
+            <span class="computer-score"></span>
         </div>
         <div class="outcome"></div>
         <script src="myScript.js"></script>
